# switchdin-middleware

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml  pytest.ini  requirements.txt
src/: main.py
src/middleware/: utils.py
src/middleware/adapters/: orm.py  repository.py
src/middleware/alembic/: env.py
src/middleware/alembic/versions/: 2a695cdad142_export_limit_table.py  d5b103e115d0_initial.py
src/middleware/api/: deps.py
src/middleware/api/api_v1/: api.py
src/middleware/api/api_v1/endpoints/: energy_resources.py  site.py
src/middleware/core/: celery_config.py  config.py
src/middleware/db/: engine.py
src/middleware/domain/: models.py
src/middleware/interfaces/api/: route.py
src/middleware/interfaces/api/v1/: route.py
src/middleware/interfaces/api/v1/site/: route.py
src/middleware/interfaces/api/v1/site/serializers/: requests.py  responses.py
src/middleware/interfaces/tasks/: __init__.py  update_site_export_limit.py
src/middleware/models/: models.py
src/middleware/schemas/: energy_resource.py  site.py
src/middleware/services/: energy_resources_service.py  site_service.py  uow.py  usecase.py
src/middleware/vendors/: network_operator_client.py
src/middleware/vendors/network_operator/: service.py
src/tests/: conftest.py
src/tests/functional/api/v1/site/: test_api.py
src/tests/functional/tasks/: test_update_site_export_limit.py
src/tests/integration/: test_uow.py
src/tests/unit/: test_models.py  test_usecase.py
test_db/: middleware.db  test_middleware.db
