[project]
name = "switchdin-middleware"
version = "0.1.0"
description = "Middleware for handling communication between DER and Network operators"
authors = ["Divakar Patil <divakarpatil35@gmail.com>"]
requires-python = ">= 3.10"
readme = "README.md"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint.pycodestyle]
max-line-length = 100

