[project]
name = "switchdin-middleware"
version = "0.1.0"
license = "GPL-3.0-or-later"
description = "Middleware for handling communication between DER and Network operators"
authors = [{name = "Divakar Patil", email = "divakarpatil35@gmail.com"},]
requires-python = ">= 3.13"
readme = "README.md"
dependencies = [
    "alembic>=1.15.2",
    "celery>=5.5.0",
    "fastapi>=0.115.12",
    "mypy>=1.15.0",
    "psycopg>=3.2.6",
    "psycopg-binary>=3.2.6",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "redis>=5.2.1",
    "ruff>=0.11.4",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools >= 78.1.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint.pycodestyle]
max-line-length = 100

